Fix icon alignment for microsite search and site header senator

--- a/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header/nysenate-header.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header/nysenate-header.scss
@@ -147,7 +147,7 @@ body {
 
 // Misc fixes from header js rewrite.
 .c-senator-nav--wrap .c-nav nav button.js-search--toggle.u-tablet-plus::after {
-  top: 10px;
+  top: 0px;
 }
 
 @include breakpoint($bp-under-sm) {
@@ -282,7 +282,7 @@ body {
   .nys-senator--thumb {
     height: 30px;
     width: 30px;
-    margin: 13px 0;
+    margin: 10px 0;
 
     img {
       min-height: 30px;
